@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Tue Jun  3 13:55:13 2003 -->
+<!-- Sun Jun  8 20:08:02 2003 -->
 <!-- USING HT2HTML 2.0 -->
 <!-- SEE http://ht2html.sf.net -->
 <!-- User-specified headers:
@@ -301,13 +301,23 @@ outgoing.
 (for incoming, action can be one of):
 <blockquote><pre>
 bounce,reject (bounce the message)
+bounce,reject=&lt;template&gt; (bounce the message using a specific template)
 drop,exit,stop (silently drop the message)
 ok,accept,deliver (deliver the message)
 ok,accept,deliver=&lt;instruction&gt; (deliver to a Maildir, mbox, program, or address)
 confirm (request confirmation for the message)
 hold (store the message in the pending queue but do not send a confirmation request)
-
 </blockquote></pre>
+
+The <b>template</b> option to <b>bounce,reject</b> can be used
+to bounce the message using a specific template file rather than the
+default (bounce.txt).  The option can be an absolute pathname to the
+template file (e.g, <i>/path/to/template.txt</i>).  Pathnames
+starting with a tilde will be expanded.  It can also be
+a relative pathname, in which case the template will be searched for
+under <a href="config-vars.html#TEMPLATE_DIR">TEMPLATE_DIR</a> as
+described in the <a href="howto-template.html">Template HOWTO</a>.
+<br><br>
 
 The <b>instruction</b> option to <b>ok,accept,deliver</b> can be used
 to short-circuit the default delivery method by delivering the message
